Fix call to action spacing

--- a/css/main.css
+++ b/css/main.css
@@ -439,6 +439,10 @@ a {
   margin-left: 124px;
 }
 
+#cta-row {
+  margin-top: 212px;
+}
+
 @media only screen and (max-width: 1120px) {
   .desktop-only {
     display: none;
